Created FeedService object as client for FeedAPI

--- a/TODO
+++ b/TODO
@@ -2,6 +2,8 @@
 
 [] Create oAuth2 management objects
 [] Create end to end test for the WeeklyItemBostrap 
+[] Feed: move from Client to FeedService
 [] Rename package to Buyer. We will have one package for each API domain (buyer)
 [] Implement API to retrieve all categories
+
 
