--- a/TODO
+++ b/TODO
@@ -2,8 +2,10 @@
 
 [] Create oAuth2 management objects
 [] Create end to end test for the WeeklyItemBostrap 
-[] Feed: move from Client to FeedService
 [] Rename package to Buyer. We will have one package for each API domain (buyer)
 [] Implement API to retrieve all categories
+[] Make Sanbox vs Production configuration depending on configuration file
 
+**DONE**
+[X] Feed: move from Client to FeedService
 
