todo list update

--- a/TODO
+++ b/TODO
@@ -1,11 +1,14 @@
 **TODO**
 
-[] Create oAuth2 management objects
-[] Create end to end test for the WeeklyItemBostrap 
+[] Uset httptest instead of HTTPClient mock in unittest 
 [] Rename package to Buyer. We will have one package for each API domain (buyer)
 [] Implement API to retrieve all categories
 [] Make Sanbox vs Production configuration depending on configuration file
+[] Manager gzip stream
 
 **DONE**
 [X] Feed: move from Client to FeedService
+[X] Create oAuth2 management objects
+[X] Create end to end test for the WeeklyItemBostrap 
+
 
